<resources>
    <string name="app_name">TheMeal_APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_home">home</string>
    <string name="str_fav">favorite</string>
    <string name="str_cat">category</string>
    <string name="nav_drawer_start">start</string>
    <string name="nav_drawer_close">close</string>
    <string name="sandwich_symbol_desc">MealFood</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="back_button_desc">back</string>
    <string name="sign_in_button"> Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="name1">Mostafa Khaled</string>
    <string name="name2">Aya Ahmed</string>
    <string name="name3"> Farha Ghallab</string>
    <string name="name4">  Rewan Salama</string>
    <string name="Creator">Our Team</string>

    <string name="describtion">This application provides users with an extensive database of meals, recipes, and cooking tips. Explore various categories of recipes, save your favorites, and get inspired to cook delicious meals.</string>
    <string name="about_us">about us</string>

</resources>