<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/str_home" />

        <item
            android:id="@+id/action_search"
            android:title="Search"
            android:icon="@drawable/baseline_search_24"
            />
        <item
            android:id="@+id/action_fav"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/str_fav" />
        <item
            android:id="@+id/action_SignOut"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/sign_out" />
    </group>
</menu>